--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form Auth using JS</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="App.js"></script>
+</head>
+<body>
+<div>
+    <div class="box">
+        <h1>LOGIN</h1>
+        <h3 id="loginSucessful"></h3>
+        <h2 id="loginFail"></h2>
+        <p>Please enter your login and password</p>
+        <input type="text" name="" placeholder="Enter Username" id="username">
+        <input type="password" name="" placeholder="Enter Password" id="password">
+        <input type="submit" name="" value="Login"  onclick="validateUser()">
+    </div>
+</div>
+    
+</body>
+</html>
 
